Update correct file

--- a/LSTM_trained.ipynb
+++ b/LSTM_trained.ipynb
@@ -3,11 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "LSTM trained.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "6vhNLl4_KxIj"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ParthMahadik/MusicGeneration/blob/main/LSTM_trained.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
