--- a/Attention_Layer_Trained.ipynb
+++ b/Attention_Layer_Trained.ipynb
@@ -3,14 +3,13 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Attention Layer Trained.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "b_Xx5gskmIpS",
         "Wt9kgQZyq0mq",
         "4sMftRkCrCLs"
       ],
-      "toc_visible": true
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -22,6 +21,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ParthMahadik/MusicGeneration/blob/main/Attention_Layer_Trained.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
